# Reborn

./: Cargo.toml  LICENSE  README.md  database.db  database.db-shm
api/: .env  Cargo.toml  database.db  database.db-shm  database.db-wal  newdb.sh  t.py
api/migrations/: 20221227155837_database.sql  20221231003427_main.sql
api/src/: auth.rs  global.rs  handlers.rs  main.rs
api/src/lib/: auth.rs  database.rs  discord.rs  endpoints.rs  global.rs  handlers.rs  http.rs  mod.rs  structs.rs
api/src/lib/database/: accounts.rs  mod.rs  tokens.rs
api/src/lib/endpoints/: accounts.rs  discord.rs  tokens.rs
bot/: Cargo.toml
bot/src/: commands.rs  main.rs
discord_bot/src/: commands.rs  main.rs
migrations/: 20221227155837_database.sql
program/: Cargo.toml
program/src/: main.rs  tmp
program/src/lib/: auth.rs  discord.rs  files.rs  global.rs  mod.rs  system.rs  thread.rs  user.rs  zip.rs
program/src/pages/: home.rs  mod.rs  register.rs
program/src/widgets/: home.rs  register.rs
server/: database.db  t.py
server/src/: main.rs
server/src/lib/: auth.rs  handlers.rs  mod.rs
server/src/lib/database/: accounts.rs  tokens.rs
server/src/lib/endpoints/: accounts.rs  discord.rs  mod.rs  tokens.rs
src/: auth.rs  main.rs
src/lib/: files.rs  http.rs  thread.rs  user.rs
src/pages/: home.rs  register.rs
src/pages/home/: render.rs
