[package]
name = "reborn_program"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
iced = "0.8.0"
lazy_static = "1.4.0"
sha256 = "1.0.3"
serde_json = "1.0"
base64 = "0.21.0"
image-base64 = "0.1.0"
zip = "0.6.3"
chrono = "0.4.23"
screenshots = "0.5.3"
sysinfo = "0.28.4"
iced_native = "0.9.1"